--- a/node-mud/public/css/styles.css
+++ b/node-mud/public/css/styles.css
@@ -1,32 +1,271 @@
-body, html {
-    height: 100%;  /* Ensures the body takes up the full viewport height */
-    margin: 0;     /* Removes default margin */
-    background-color: black;
-    color:chartreuse;
-}
+/*
+red: #ff0033;
+green: #60f066;
+blue: #0066ff;
+yellow: #ffcc00;
+gray:  #d3d3d3
+*/
 
+html, body {
+background-color: #000;
+padding: 1em;
+margin: 0;
+height: 100%;
+color: #fff !important;
+font-family: monospace;
+font-size: 105%;
+}
+table {
+    color: #fff !important;
+}
+html, body a {
+color: #60f066;
+}
+h1 {
+padding: 0 0 0 0;
+margin: 0;
+font-size: 155%;
+color: #ffcc00;
+font-weight: bold;
+}
+h2, h3, h4, h5, h6, .title {
+color: #ddd;
+padding: 0 0 0 0;
+margin: 0;
+font-size: 145%;
+}
 #mudwrapper {
-    height: 100vh;
-    overflow-y: auto; /* Allows scrolling if content exceeds the viewport height */
+float: left;
+height: 620px;
 }
-
+.error {
+color: #ff0033;
+}
+.failure {
+color: #ff0033;
+}
+.success {
+color: #60f066;
+}
+.warning {
+color: #ffcc00;
+}
+.alert {
+color: #0066ff;
+}
+.row {
+margin-bottom: .3em;
+}
+#terminal {
+width: 100%;
+overflow: auto;
+float: left;
+height: 600px;
+}
+#terminal::-webkit-scrollbar {
+background: transparent;
+}
+#terminal .subtext {
+font-style: italic;
+}
+#terminal .row {
+width: 99%;
+}
 #inputwrapper {
-    position: fixed;
-    bottom: 0px;
+float: left;
+clear: both;
+width: 100%;
+padding: 5px 0;
+}
+#cmd {
+border: none;
+padding: 0 auto 0 auto;
+opacity: 0.75;
+}
+.opening-title {
+font-size: 3em;
+color: #ff0033;
+-webkit-transition: text-shadow 0.2s linear;
+-moz-transition: text-shadow 0.2s linear;
+-ms-transition: text-shadow 0.2s linear;
+-o-transition: text-shadow 0.2s linear;
+transition: text-shadow 0.2s linear;
+}
+.opening-title:hover {
+    text-shadow: 0 0 5px #60f066;
+}
+.score {
+margin-bottom: .25em;
+}
+.score h1, h4 {
+border-bottom: 1px dashed #eee;
+}
+.score h4 {
+text-shadow: none;
+border-bottom: 1px solid #000;
+}
+.score .score-level {
+color: #ff0033;
+}
+.score .saves li{
+list-style-type: square;
+}
+.score .stat-gold {
+color: #ffcc00;
+}
+.score .stat-hp {
+color: #ff0033;
+}
+.score .stat-mana {
+color: #0066ff;
+}
+.score .stat-mv {
+color: #ffcc00;
+}
+.cmd {
+color: #888;
+font-style: italic;
+}
+.cmd-get {
+color: #60f066;
+}
+.cmd-chat {
+color: #fff;
+}
+.cmd-chat .msg-name {
+color: #ffcc00;
+font-weight: bold;
+}
+.cmd-say {
+color: #fff;
+}
+.cmd-say .msg-name {
+font-weight: bold;
+color: #60f066;
+}
+.cmd-yell {
+color: #fff;
+}
+.cmd-yell .msg-name {
+font-weight: bold;
+color: purple;
+}
+.motd {
+border-top: 1px dashed #ffcc00;
+border-bottom: 1px dashed #ffcc00;
+color: #ff0033;
+padding: 1em 1em .25em 1em;
+font-weight: bold;
+}
+.cprompt {
+padding-bottom: .5em;
+}
+.room .room-title {
+font-weight: bold;
+color: #ffcc00;
+}
+.room .room-exits {
+color: #ff0033;
+}
+.room-item {
+color: #eee;
+}
+.enter-name {
+font-weight: bold;
+}
+.logout-msg {
+font-weight: bold;
+color: #ff0033;
+}
+.table-no-border>thead>tr>th, 
+.table-no-border>tbody>tr>th, 
+.table-no-border>tfoot>tr>th, 
+.table-no-border>thead>tr>td, 
+.table-no-border>tbody>tr>td, 
+.table-no-border>tfoot>tr>td {
+border-top: none;
+}
+.red {
+color: #ff0033;
+}
+.green {
+color: #60f066;
+}
+.blue {
+color: #0066ff;
+}
+.yellow {
+color: #ffcc00;
+}
+.grey {
+color: #d3d3d3;
+}
+.large {
+font-size: 1.5em;
+letter-spacing: 0em;
+}
+.link-btn {
+background: none !important;
+border: none;
+text-decoration: underline;
+cursor: pointer;
+}
+#prev-cmd-list {
+width: 100%;
+display: inline-block;
+padding: 0;
+margin: 0 auto;
+text-align: center;
+}
+#prev-cmd-list li {
+padding: 0;
+margin: 0;
+display: inline-block;
+}
+.prev-cmd {
+color: #ffcc00;
+}
+.hunger {
+color: red;
+}
+.quest-complete {
+font-weight: bold;
+font-size: 120%;
+}
+.player-death-msg {
+font-weight: bold;
+text-decoration: underline;
+}
+.victory {
+font-weight: bold;
+text-decoration: underline;
+}
+.rnd-status {
+    font-weight: bold;
+    color:  #ffcc00;
+}
+.skill-output {
+    border: 1px solid lightgray;
 }
 
-#xmudwrapper {
-    height: 100vh; /* Full viewport height */
-    overflow-y: auto; /* Allows scrolling if content exceeds the viewport height */
-    display: flex;
-}
-
-/* For better user experience, hide scrollbar if not needed */
-#xmudwrapper::-webkit-scrollbar {
-    width: 0.5em;
-}
-
-#xmudwrapper::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+@media only screen and (min-width: 1400px) and (min-height: 920px) {
+    html, body {
+    background-image: none;
+    background-image: url("/bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    }
+    #mudwrapper {
+    float: none;
+    padding: 200px 100px 0 100px;
+    }
+    #terminal {
+    float: none;
+    width: 800px;
+    }
+    #inputwrapper {
+    clear: both;
+    width: 100%;
+    padding: 5px 0;
+    }
 }
