--- a/node-mud/public/css/styles.css
+++ b/node-mud/public/css/styles.css
@@ -51,7 +51,7 @@ color: #ffcc00;
 color: #0066ff;
 }
 .row {
-margin-bottom: .3em;
+margin-bottom: 0;
 }
 #terminal {
 width: 100%;
@@ -157,7 +157,6 @@ font-weight: bold;
 padding-bottom: .5em;
 }
 .room .room-title {
-font-weight: bold;
 color: #ffcc00;
 }
 .room .room-exits {
@@ -244,7 +243,6 @@ text-decoration: underline;
 @media only screen and (min-width: 1400px) and (min-height: 920px) {
     html, body {
     background-image: none;
-    background-image: url("/bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     }
@@ -261,4 +259,8 @@ text-decoration: underline;
     width: 100%;
     padding: 5px 0;
     }
+}
+
+.room p {
+    margin-bottom: 0;
 }
