made the warning messages less dramatic

--- a/node-mud/public/css/styles.css
+++ b/node-mud/public/css/styles.css
@@ -58,8 +58,12 @@ h2, h3, h4, h5, h6, .title {
     color: #00FF00;
 }
 
+.undefined {
+    color: #d3d3d3;
+}
+
 .warning {
-    color: #FFFF00;
+    color: #d3d3d3;
 }
 
 .alert {
